# FGR

./: README.md  pyproject.toml  requirements.txt
FGR/: encoder.py
FGR/src/callbacks/: light_progress_bar.py  wandb_callbacks.py
FGR/src/data/: datamodules.py  datasets.py
FGR/src/data/components/: dataset.py  utils.py
FGR/src/datamodules/: datamodules.py  datasets.py
FGR/src/datamodules/components/: dataset.py  utils.py
FGR/src/models/: fgr_module.py
FGR/src/models/components/: autoencoder.py  losses.py  utils.py
FGR/src/utils/: env_utils.py  instantiators.py  logging_utils.py  metadata_utils.py  rich_utils.py  saving_utils.py  utils.py
