[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "FGR"
version = "0.1.0"
description = "Functional Group Representation (FGR) package"
authors = [
    { name="Roshan MSB", email="bt21d401@smail.iitm.ac.in" }
]
readme = "README.md"
requires-python = ">=3.9"

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["FGR*"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}